# scriabin

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  license.txt  pen.sublime-workspace  readme.md
in/music-files/: coalescence.input.xml  homo-sapiens-june-3-2018.large.xml  homo-sapiens-june-3-extract-1.xml
in/test-files/: .keep
other/: string-orchestra.txt
other/Muehleisen/: Melodies.txt  muehleisen-lesson-2018-02-21.txt  muehleisen-lesson-2018-07-25.txt  muehleisen-lesson-2018-09-18.txt
other/logic/Coalescence.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
other/logic/Coalescence.logicx/Alternatives/000/Autosave/: 2018-06-25 03:28:18 +0000.displayData  2018-06-25 03:28:18 +0000.eventData  2018-06-25 03:28:18 +0000.songData
other/logic/Coalescence.logicx/Alternatives/000/Project File Backups/00/: MetaData.plist
other/logic/Coalescence.logicx/Alternatives/000/Project File Backups/01/: ProjectData
other/logic/Coalescence.logicx/Alternatives/000/Undo Data.nosync/: 00D2DE29-6082-42C4-9B31-52315BF654C2.undo  01B20BE6-F09F-495F-A46D-C412AB7472F3.undo  0631F33E-486C-436D-AD8A-5580F9C379F6.undo  0EAECE5F-6F86-4B97-A3DC-7CE7C2EFC146.undo  0F716B7B-AB87-41CD-B676-D1D044A9D3DA.undo  107034CE-12AC-4B02-AF39-8860E534B2E8.undo  1220C446-F0D9-48E9-801F-9CA93B46A91B.undo  123D42AA-FF0E-4ABE-A1DA-347D26641B4B.undo  12E7A5D7-3FD2-4017-A307-7B52A9518363.undo  14EE29B3-E0FD-489F-9BAD-70CF9F7966A5.undo  1619DC9D-28C0-45BC-A06A-72FEF7009892.undo  17CB1DE6-1A89-4CE5-94AD-C16B4F8C0BF3.undo  2215681F-0018-433C-AC95-9899210A17B7.undo  22B1F826-1B3E-4756-8715-C691892573D4.undo  27BDB2CB-3E36-451F-BE95-2831B8829A1E.undo  2A371BE2-E1D8-4392-A626-223FF2CD739D.undo  2AA3724C-AA5E-42A8-848C-BFD54707AC27.undo  2D4D2272-BE84-4C0D-9033-161B609864CF.undo  2DCAA495-E42C-4DE6-90AD-54C2D64FA7A6.undo  2FEA4F42-91FA-427D-9EE8-60899BF38AAA.undo  3211B360-C566-4589-AC4E-1CA4ACA6D6E3.undo  34A4B7B2-30C5-4BCA-B4FC-0A7ED15C18B2.undo  35E4B4C1-DFA8-4776-9798-31D97368379C.undo  3A0A1C46-DC7F-407E-817E-B6BD5837BA14.undo  3AF70106-A481-4D88-B188-4F3172F2AA40.undo  3E10D99E-0CD6-4F66-BB4B-9264CFAF5F33.undo  3FBF11CE-6A86-4674-96E2-C497E5CFFFC5.undo  41C911C3-A3CC-43B1-80CC-392DD5488792.undo  4215959D-37AA-4DF5-BA96-9ABA0BD50D44.undo  42E35E86-F255-492F-817C-3F598E15EC89.undo  43851A66-CC43-41CA-BE02-BB3E76AEA5B3.undo  439815C7-AAA3-4F1F-AECD-570B2E9F97C6.undo  453982F6-42EF-4473-A17F-9910BCEDEE15.undo  47634B71-DCC6-4573-BB82-315F3E3AAC14.undo  492967B7-A526-4BBA-B41C-EC1B345BFD3B.undo  4BB25FCC-FE12-44F1-9C88-1010E9E8FF6F.undo  4CEDC279-C796-4152-9CD5-825CFE78E4FE.undo  4DAC56F0-84F9-4B78-BE7A-EDD2870DD1D5.undo  4DB5E390-2474-4FBB-B4A1-1119B91ED76E.undo  4E6217B3-3C5F-4B55-8B8E-DFF1C8E71134.undo  (+84 more)
other/logic/Coalescence.logicx/Resources/: ProjectInformation.plist
other/sublime/: pen.sublime-project
sourcecode/instrument-config/: instrument-config.xml  instrument-config.xsd
sourcecode/pen/: Atom.cpp  Atom.h  Coalescence.cpp  Coalescence.h  CommandLineArgumentPrototype.cpp  CommandLineParser.cpp  CommandLineParser.h  CommandLineValue.cpp  CommandLineValue.h  Constants.h  Etude.cpp  Etude.h  InstrumentConfig.cpp  InstrumentConfig.h  InstrumentSpecies.cpp  InstrumentSpecies.h  PitchPattern.cpp  PitchPattern.h  Prob.cpp  Prob.h  Program.h  StrettoState.cpp  StrettoState.h  addMarimbaNotes.h  addViolinNotes.h  cmd.h  constants.h  etude1.h  june3.cpp  june3.h  util.h
sourcecode/scriabin/: Atom.cpp  Atom.h  Coalescence.cpp  Coalescence.h  CommandLineArgumentPrototype.cpp  CommandLineArgumentPrototype.h  CommandLineParser.cpp  CommandLineValue.h  Constants.h  DynamicValue.h  Etude.cpp  InstrumentConfig.cpp  PitchPattern.cpp  Prob.cpp  Program.h  StrettoState.cpp  StrettoState.h  addMarimbaNotes.h  addViolinNotes.h  cmd.h  etude1.h
sourcecode/submodules/: .keep
sourcecode/test/: PEN_PATH.h  SCRIABIN_PATH.h  catch.hpp  main.cpp
sourcecode/test/catch/include/: main.cpp
sourcecode/test/catch/include/internal/: catch_interfaces_reporter.h
sourcecode/test/compositions/: Coalescence.cpp  CoalescenceLock.cpp  CoalescenceLockGenerator.cpp  CoalescenceLockdownGenerator.cpp  CompEtude1.cpp  CompJune3.cpp
sourcecode/test/tests/: TestAtom.cpp  TestCommandLineParser.cpp  TestProgram.cpp  TestProp.cpp  TestUtil.cpp
xcode/pen-test.xcodeproj/: project.pbxproj
xcode/pen.xcodeproj/: project.pbxproj
xcode/pen.xcworkspace/: contents.xcworkspacedata
xcode/scriabin-test.xcodeproj/: project.pbxproj
xcode/scriabin-test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/scriabin-test.xcodeproj/xcshareddata/xcschemes/: scriabin-test.xcscheme
xcode/scriabin.xcodeproj/: project.pbxproj
xcode/scriabin.xcodeproj/xcshareddata/xcschemes/: scriabin.xcscheme
xcode/scriabin.xcworkspace/: contents.xcworkspacedata
